--- a/index.html
+++ b/index.html
@@ -1,24 +1,36 @@
-<!DOCTYPE html> 
- <html>
-          <head>
-            <title>HTML</title>
-          </head>
-
-          <body>
-            <h1> HTML-->Hypertext Markup Language</h1>
-            <p><B>Hypertext Markup Language (HTML)</B> is the standard markup language for documents designed to be displayed in a web browser. It defines the content and structure of web content. It is often assisted by technologies such as Cascading Style Sheets (CSS) and scripting languages such as JavaScript, a programming language.
-
-Web browsers receive HTML documents from a web server or from local storage and render the documents into multimedia web pages. HTML describes the structure of a web page semantically and originally included cues for its appearance.
-
-HTML elements are the building blocks of HTML pages. With HTML constructs, images and other objects such as interactive forms may be embedded into the rendered page. HTML provides a means to create structured documents by denoting structural semantics for text such as headings, paragraphs, lists, links, quotes, and other items. HTML elements are delineated by tags, written using angle brackets. Tags such as <img> and directly introduce content into the page. Other tags such as  surround and provide information about document text and may include sub-element tags. Browsers do not display the HTML tags but use them to interpret the content of the page.
-
-HTML can embed programs written in a scripting language such as JavaScript, which affects the behavior and content of web pages. The inclusion of CSS defines the look and layout of content. The World Wide Web Consortium (W3C), former maintainer of the HTML and current maintainer of the CSS standards, has encouraged the use of CSS over explicit presentational HTML since 1997.[2] A form of HTML, known as HTML5, is used to display video and audio, primarily using the element, together with JavaScript.</p>
-          </body>
-        <body><h3>CSS-->Cascading Style Sheets  </h3>
-<p><b>Cascading Style Sheets (CSS)</b> is a style sheet language used for specifying the presentation and styling of a document written in a markup language such as HTML or XML (including XML dialects such as SVG, MathML or XHTML).[2] CSS is a cornerstone technology of the World Wide Web, alongside HTML and JavaScript.[3]
-
-CSS is designed to enable the separation of content and presentation, including layout, colors, and fonts.[4] This separation can improve content accessibility, since the content can be written without concern for its presentation; provide more flexibility and control in the specification of presentation characteristics; enable multiple web pages to share formatting by specifying the relevant CSS in a separate .css file, which reduces complexity and repetition in the structural content; and enable the .css file to be cached to improve the page load speed between the pages that share the file and its formatting.
-
-Separation of formatting and content also makes it feasible to present the same markup page in different styles for different rendering methods, such as on-screen, in print, by voice (via speech-based browser or screen reader), and on Braille-based tactile devices. CSS also has rules for alternate formatting if the content is accessed on a mobile device.[5]</p></body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Multimedia</title>
+</head>
+<body>
+  <button>
+    <img src="https://www.filmibeat.com/wimg/desktop/2014/11/pilla-nuvvu-leni-jeevitham_141568572580.jpg" width="250" height="200"><br> 
+    <audio controls>
+      <source src="../Pilla Nuvvu Leni Jeevitham.mp3">
+    </audio><br>
+  <a href="../Pilla Nuvvu Leni Jeevitham.mp3" download>Download</a>
+  </button>
+  <button>
+    <img src="https://i.ytimg.com/vi/uu5dkmbo0uU/maxresdefault.jpg" width="250" height="200"><br> 
+    <audio controls>
+      <source src="../Lucky Baskhar Title Track.mp3">
+    </audio><br>
+  <a href="../Lucky Baskhar Title Track.mp3" download>Download</a>
+  </button>  <button>
+    <img src="https://image.tmdb.org/t/p/original/xoq7fb2cAxicALz7qqHE1IBhBBm.jpg" width="250" height="200"><br> 
+    <audio controls>
+      <source src="../[iSongs.info] 05 - Nee Kosame.mp3">
+    </audio><br>
+  <a href="../[iSongs.info] 05 - Nee Kosame.mp3" download>Download</a>
+  </button>  <button>
+    <img src="https://www.bizzbuzz.news/h-upload/2025/01/03/1950163-marco-movie-crosses-rs-100-crore-producer-denies-ott-release.jpg" width="250" height="200"><br> 
+    <audio controls>
+      <source src="../[iSongs.info] 05 - Brother.mp3">
+    </audio><br>
+  <a href="../[iSongs.info] 05 - Brother.mp3" download>Download</a>
+  </button>
+</body>
 </html>
-
