--- a/multimedia.html
+++ b/multimedia.html
@@ -11,7 +11,7 @@
 <body>
     <center>
         <h1>THE WOLF OF THE STREET</h1>
-    </center>
+    </centee>
     <details>
         <summary>
             <b>Season-1</b><br><br>
@@ -22,7 +22,7 @@
     <br>
     <center>
     <h1> The stangers things</h1>
-  </center>
+  </centee>
     <details>
         <summary>
             <b>Season-2</b><br><br>
