--- a/index.html
+++ b/index.html
@@ -1,36 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Multimedia</title>
 </head>
+
 <body>
   <button>
-    <img src="https://www.filmibeat.com/wimg/desktop/2014/11/pilla-nuvvu-leni-jeevitham_141568572580.jpg" width="250" height="200"><br> 
+    <img src="https://www.filmibeat.com/wimg/desktop/2014/11/pilla-nuvvu-leni-jeevitham_141568572580.jpg" width="250"
+      height="200"><br>
     <audio controls>
       <source src="../Pilla Nuvvu Leni Jeevitham.mp3">
     </audio><br>
-  <a href="../Pilla Nuvvu Leni Jeevitham.mp3" download>Download</a>
+    <a href="../Pilla Nuvvu Leni Jeevitham.mp3" download>Download</a>
   </button>
   <button>
-    <img src="https://i.ytimg.com/vi/uu5dkmbo0uU/maxresdefault.jpg" width="250" height="200"><br> 
+    <img src="https://i.ytimg.com/vi/uu5dkmbo0uU/maxresdefault.jpg" width="250" height="200"><br>
     <audio controls>
       <source src="../Lucky Baskhar Title Track.mp3">
     </audio><br>
-  <a href="../Lucky Baskhar Title Track.mp3" download>Download</a>
-  </button>  <button>
-    <img src="https://image.tmdb.org/t/p/original/xoq7fb2cAxicALz7qqHE1IBhBBm.jpg" width="250" height="200"><br> 
+    <a href="../Lucky Baskhar Title Track.mp3" download>Download</a>
+  </button> <button>
+    <img src="https://image.tmdb.org/t/p/original/xoq7fb2cAxicALz7qqHE1IBhBBm.jpg" width="250" height="200"><br>
     <audio controls>
-      <source src="../[iSongs.info] 05 - Nee Kosame.mp3">
+      <source src="../Iframes/IMAGES/[iSongs.info] 05 - Nee Kosame.mp3">
     </audio><br>
-  <a href="../[iSongs.info] 05 - Nee Kosame.mp3" download>Download</a>
-  </button>  <button>
-    <img src="https://www.bizzbuzz.news/h-upload/2025/01/03/1950163-marco-movie-crosses-rs-100-crore-producer-denies-ott-release.jpg" width="250" height="200"><br> 
+    <a href="../Iframes/IMAGES/[iSongs.info] 05 - Nee Kosame.mp3" download>Download</a>
+  </button> <button>
+    <img
+      src="https://www.bizzbuzz.news/h-upload/2025/01/03/1950163-marco-movie-crosses-rs-100-crore-producer-denies-ott-release.jpg"
+      width="250" height="200"><br>
     <audio controls>
-      <source src="../[iSongs.info] 05 - Brother.mp3">
+      <source src="../Iframes/IMAGES/[iSongs.info] 05 - Brother.mp3">
     </audio><br>
-  <a href="../[iSongs.info] 05 - Brother.mp3" download>Download</a>
+    <a href="../Iframes/IMAGES/[iSongs.info] 05 - Brother.mp3" download>Download</a>
   </button>
 </body>
+
 </html>
